[gd_scene load_steps=38 format=3 uid="uid://ci32ibukbp6pi"]

[ext_resource type="Script" path="res://mobs/Legrorat/legrorat.gd" id="1_1bao3"]
[ext_resource type="Texture2D" uid="uid://bulo715d8digi" path="res://mobs/Legrorat/animations/idle/idle rat.png" id="1_5nagp"]
[ext_resource type="Texture2D" uid="uid://bxoe1odp4xn0n" path="res://mobs/Legrorat/animations/attack/charge rat.png" id="2_irsce"]
[ext_resource type="Texture2D" uid="uid://by842obq5ywmk" path="res://mobs/Boss/Ecureuil/Animation/Death/Death.png" id="2_iua5i"]
[ext_resource type="Texture2D" uid="uid://beg2ht7s3k0sx" path="res://mobs/Legrorat/animations/walk/walk_rat.png" id="4_0l8cl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w5mtj"]
radius = 232.019

[sub_resource type="AtlasTexture" id="AtlasTexture_d15ln"]
atlas = ExtResource("2_iua5i")
region = Rect2(0, 0, 503, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2pgk"]
atlas = ExtResource("2_iua5i")
region = Rect2(503, 0, 503, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyopc"]
atlas = ExtResource("2_iua5i")
region = Rect2(1006, 0, 503, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbufy"]
atlas = ExtResource("2_iua5i")
region = Rect2(1509, 0, 503, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ia6"]
atlas = ExtResource("2_iua5i")
region = Rect2(2012, 0, 503, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_228ei"]
atlas = ExtResource("2_iua5i")
region = Rect2(2515, 0, 503, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d3mx"]
atlas = ExtResource("2_iua5i")
region = Rect2(3018, 0, 503, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1sxj"]
atlas = ExtResource("2_iua5i")
region = Rect2(3521, 0, 503, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_har8p"]
atlas = ExtResource("2_irsce")
region = Rect2(52, 0, 631, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_70olw"]
atlas = ExtResource("2_irsce")
region = Rect2(683, 0, 631, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1a26"]
atlas = ExtResource("2_irsce")
region = Rect2(1314, 0, 631, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ke5h"]
atlas = ExtResource("2_irsce")
region = Rect2(1945, 0, 631, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mm0p"]
atlas = ExtResource("1_5nagp")
region = Rect2(17, 0, 522, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfy6x"]
atlas = ExtResource("1_5nagp")
region = Rect2(539, 0, 522, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy6kq"]
atlas = ExtResource("1_5nagp")
region = Rect2(1061, 0, 522, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibsgl"]
atlas = ExtResource("1_5nagp")
region = Rect2(1583, 0, 522, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv8mm"]
atlas = ExtResource("1_5nagp")
region = Rect2(2105, 0, 522, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1bho"]
atlas = ExtResource("1_5nagp")
region = Rect2(2627, 0, 522, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8htv"]
atlas = ExtResource("1_5nagp")
region = Rect2(3149, 0, 522, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_24yjf"]
atlas = ExtResource("1_5nagp")
region = Rect2(3671, 0, 522, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b0y8"]
atlas = ExtResource("4_0l8cl")
region = Rect2(118, 0, 451, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0i3r"]
atlas = ExtResource("4_0l8cl")
region = Rect2(626, 0, 439, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_50ige"]
atlas = ExtResource("4_0l8cl")
region = Rect2(1104, 0, 456, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_e03kj"]
atlas = ExtResource("4_0l8cl")
region = Rect2(1574, 0, 456, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjbpd"]
atlas = ExtResource("4_0l8cl")
region = Rect2(2066, 0, 465, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqxw3"]
atlas = ExtResource("4_0l8cl")
region = Rect2(2566, 0, 472, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkrmp"]
atlas = ExtResource("4_0l8cl")
region = Rect2(3074, 0, 478, 600)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gl1j"]
atlas = ExtResource("4_0l8cl")
region = Rect2(3573, 0, 481, 600)

[sub_resource type="SpriteFrames" id="SpriteFrames_qnxnd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d15ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2pgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyopc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbufy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5ia6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_228ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d3mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1sxj")
}],
"loop": false,
"name": &"Death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_har8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70olw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1a26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ke5h")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mm0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfy6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy6kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibsgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv8mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1bho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8htv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24yjf")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b0y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0i3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50ige")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e03kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjbpd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqxw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkrmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gl1j")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dpek"]
size = Vector2(42, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7yxk"]
size = Vector2(50, 23)

[node name="Legrorat" type="CharacterBody2D"]
script = ExtResource("1_1bao3")
DamageGiveByPlayer = 1
attack_strength = 1

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(22, 11)
shape = SubResource("CircleShape2D_w5mtj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -3)
scale = Vector2(0.091954, 0.0666667)
sprite_frames = SubResource("SpriteFrames_qnxnd")
animation = &"attack"
autoplay = "idle"

[node name="AreaIdle" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 128

[node name="IdleCollision" type="CollisionShape2D" parent="AreaIdle"]
position = Vector2(27, 11.5)
shape = SubResource("RectangleShape2D_3dpek")

[node name="AreaAttack" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="AttackCollision" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2(2, -0.5)
shape = SubResource("RectangleShape2D_t7yxk")

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(27, 11.5)
shape = SubResource("RectangleShape2D_3dpek")

[node name="Direction" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AreaWalk" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="WalkCollision" type="CollisionShape2D" parent="AreaWalk"]
position = Vector2(6, 0.5)
shape = SubResource("RectangleShape2D_3dpek")

[node name="WaitToChangeDirection" type="Timer" parent="."]
one_shot = true

[node name="Stun" type="Timer" parent="."]
one_shot = true

[node name="Run" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="Collision" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_3dpek")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="AreaAttack" to="." method="_on_area_attack_area_entered"]
[connection signal="body_entered" from="AreaAttack" to="." method="_on_area_attack_body_entered"]
[connection signal="timeout" from="Direction" to="." method="_on_direction_timeout"]
[connection signal="timeout" from="WaitToChangeDirection" to="." method="_on_wait_to_change_direction_timeout"]
[connection signal="timeout" from="Stun" to="." method="_on_stun_timeout"]
[connection signal="timeout" from="Run" to="." method="_on_run_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
